tests/codegen/fail/object/attr_name_double_underscored.rs
use juniper::graphql_object;

struct __Obj;

#[graphql_object]
impl __Obj {
    fn id(&self) -> &str {
        "funA"
    }
}

fn main() {}
